<resources>
    <string name="app_name">MyDailyWeight</string>
    <string name="banner_ad_unit_id">ca-app-pub-9184630521515163/5534260932</string>
    <string name="interstital_ad_unit_id">ca-app-pub-9184630521515163/7010994132</string>
    <string name="ad_mob_app_id">ca-app-pub-9184630521515163~4057527733</string>
    <string name="ad_video">ca-app-pub-9184630521515163/2951480532</string>
    <string name="facebook_app_id">762052760617441</string>
    <string name="weight">Weight:</string>
    <string name="date">Date:</string>
    <string name="add_weight_description">Enter your weight here.</string>
    <string name="add_hint">Hint: You already entered your weight today. Try again tomorrow.</string>
    <string name="no_weight_entered">Please enter a weight.</string>
    <string name="notification_alert_title">Enter a notification time.</string>
    <string name="add_first_weight">Add your first weight entry</string>
    <string name="add_another_weight">Add your today´s weight</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="hint">Hint</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_connection">You are not connected to a network. Please check your network settings and try again.</string>
    <string name="email_worng_format">The entered email address has the wrong format.\n\nExample: example@provider.com</string>
    <string name="password_worng_format">The password must have a minimum length of 8 characters</string>
    <string name="error_try_again_later">Somethings gone wrong. Please try agein later.</string>
    <string name="try_again">Try agein</string>
    <string name="register">Sign up</string>
    <string name="logout">Logout</string>
    <string name="progress">Progress</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="start_weight">Start Weight</string>
    <string name="dream_weight">Desired Weight</string>
    <string name="login_welcome">Welcome to MyDailyWeight, your personal weight diary.\n\n No account? Sign up for free, or sign in to your account.</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_sign_up">Sign up now!</string>
    <string name="login_no_account_error">For the given email address no account was found..</string>
    <string name="login_wrong_password">The given password does not match with the account.</string>
    <string name="register_welcome">Register your new account with your email address and your custom password. The choosen password must have a minimum length of 8 characters.</string>
    <string name="register_passwords_not_match">The entered passwords do not match.</string>
    <string name="register_email_already_use">The given email is already in use. Please choose another one.</string>
    <string name="main_sync_failed">Synchronization failed. Watch video till the end.</string>
    <string name="main_diff_sinde_begin">Progres since begin: </string>
    <string name="main_till_end">Difference to desired weight: </string>
    <string name="main_download_loose_data">If you are downloading new data you will loose some weight entries! Download data anyway?</string>
    <string name="main_download_anyway">Download anyway</string>
    <string name="main_nothing_download">There is no data to download. You are up to date.</string>
    <string name="main_logout_sync">There are some entries to sychronise before logout. When you logout the synchronization also will be done.</string>
    <string name="main_logout_no_sync">Are you sure you want to logout?</string>
    <string name="main_nothing_sync">There is no data to synchronize.</string>
    <string name="main_weight_information">Weight Information</string>
    <string name="main_sync_button_title">Synchronize and Save</string>
    <string name="main_button_first_weight">Add weight</string>
    <string name="user_welcome">Please entere here your personal details for your profile.</string>
    <string name="user_button_update">Update profile</string>
    <string name="user_no_nickname">No username entered.</string>
    <string name="user_no_age">No age entered.</string>
    <string name="user_no_height">No height entered.</string>
    <string name="user_no_current_weight">No start weight entered.</string>
    <string name="user_no_dream_weight">No desired weight entered.</string>
    <string name="progressbar_sign_in">Sign in ...</string>
    <string name="progressbar_register_user">Register account ...</string>
    <string name="progressbar_refresh">Refesh</string>
    <string name="progressbar_loading">Loading ...</string>
    <string name="progressbar_sync">Synchronizing ...</string>
    <string name="progressbar_update_user">Save user ...</string>
    <string name="menu_add">Add Weight</string>
    <string name="menu_progress">Progress</string>
    <string name="menuSelectTime">Reminder</string>
    <string name="menu_sync">Synchronize</string>
    <string name="menu_download">Load Entries</string>
    <string name="menu_logout">Logout</string>
    <string name="no_weight_difference">No difference</string>
    <string name="progress_dialog_title">Your Progress</string>
    <string name="progress_lose_weight">You already lost %1$skg, there are only %2$skg to your desired weight.</string>
    <string name="progress_reach_desired_weight">You already lost %1$skg. Congratulation, you reached your desired weight.</string>
    <string name="progress_gained_weight">You gained %1$skg, there are %2$skg to your desired weight.</string>
    <string name="progress_bmi">Your current BMI is %1$s, this means you are %2$s.</string>
    <string name="overweight">overweight</string>
    <string name="normal_weight">of normal weight</string>
    <string name="underweight">underweight</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_weight_graph">Weight Diagram</string>
    <string name="navigation_drawer_weight_list">Weight List</string>
    <string name="navigation_drawer_overview">Overview</string>
    <string name="navigation_drawer_profile">Account</string>
    <string name="navigation_drawer_edit_profile">Edit Account</string>
    <string name="navigation_drawer_delete_account">Delete Account</string>
    <string name="navigation_drawer_privacy_policy">Privacy Policy</string>
    <string name="navigation_drawer_about_us">About us</string>
</resources>