<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryGray">

    <TextView
        android:text="@string/notification_alert_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/primaryYellow"
        android:textSize="20sp"
        android:textAlignment="center" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLayout"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tPAdd"
            android:text="@string/add"
            android:layout_weight="1"
            android:textColor="@color/primaryGray"
            android:background="@color/primaryYellow"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:textSize="18sp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tPCancel"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textColor="@color/primaryGray"
            android:background="@android:color/white"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>