<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryGray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomeUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center"
        android:background="@color/primaryGray"
        android:text="@string/user_welcome"
        android:textAlignment="center"
        android:textColor="@color/primaryYellow"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:paddingLeft="5dp"
            android:background="@color/secondaryGray"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/primaryYellow"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@null"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userAgeTextView"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:text="@string/age"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:paddingLeft="5dp"
            android:background="@color/secondaryGray"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/age"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@color/primaryYellow"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@null"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userHeightTextView"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:text="@string/height"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editTextHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:paddingLeft="5dp"
            android:background="@color/secondaryGray"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@color/primaryYellow"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@null"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userDreamWeightTextView"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:text="@string/dream_weight"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editTextDesiredWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:paddingLeft="5dp"
            android:background="@color/secondaryGray"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/dream_weight"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@color/primaryYellow"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@null"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_gravity="center"
        android:background="@color/primaryYellow"
        android:text="@string/user_button_update"
        android:textColor="@color/primaryGray"
        android:textSize="18dp" />
</LinearLayout>